--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,8 @@
 
 \todo{Abkürzungen}
 \todo{Safekeeper vs Overseer; Clotiled vs Display --> einheitlich!}
+\todo{section oder Section??}
+\todo{page numers vs section when citing??}
 
 % Cover, abstract, table of contents, etc.
 \subfile{./zyx/preface.tex}
