--- a/literature.bib
+++ b/literature.bib
@@ -496,6 +496,15 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   year      = {2020},
 }
 
+@Article{Nielson1993,
+  author  = {Nielson, J},
+  journal = {Nielson Norman Group: Jan},
+  title   = {Response Times: The 3 Important Limits},
+  year    = {1993},
+  volume  = {1},
+  eprint  = {https://www.nngroup.com/articles/response-times-3-important-limits/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
